--- a/README
+++ b/README
@@ -1,12 +1,12 @@
-Things to implement: 
-* watchdog timers 
-    * conditions for timers 
-    * Need to know how long before reset 
-    * https://github.com/adafruit/Adafruit_SleepyDog/blob/master/examples/BasicUsage/BasicUsage.ino 
+# Things to implement: 
+- watchdog timers 
+    - Need to know how long before reset 
 
+- implement the different packet that will be sent for recovery
+    - Include metadata in our packet (flight mode)
 
-* implement the different packet that will be sent for recovery
-    * Include metadata in our packet (flight mode)
+- Need to move initialization information to the SFR, so that we can pack it into the metadata 
 
-* Need to move initialization information to the SFR, so that we can pack it into the metadata 
-* Finalize a packet format 
+- Finalize a packet format that includes metadata 
+
+- Fram chip implementation 
